test/bad/eps0.pacc
/*
nopacc 5:9 'expected Defns, or end-of-input'
*/

S ← ε*
